--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <!-- START WELCOME SECTION -->
 
 <section id="welcome-section" class="welcome-section">
-  <h1>Hey I am Mimic</h1>
+  <h1>Hey I am Mahir</h1>
   <p>a web developer</p>
 </section>
 
@@ -163,28 +163,22 @@
   </div>
   <div class="contact-links">
     <a
-      href="https://facebook.com/freecodecamp"
+      href="https://facebook.com/muhtasim1mahir"
       target="_blank"
       class="btn contact-details"
       ><i class="fab fa-facebook-square"></i> Facebook</a
     >
     <a
       id="profile-link"
-      href="https://github.com/freecodecamp"
+      href="https://github.com/MuhtasimMahir"
       target="_blank"
       class="btn contact-details"
       ><i class="fab fa-github"></i> GitHub</a
     >
-    <a
-      href="https://twitter.com/freecodecamp"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-twitter"></i> Twitter</a
-    >
-    <a href="mailto:example@example.com" class="btn contact-details"
+    <a href="mailto:muhtasimmahir@live.com" class="btn contact-details"
       ><i class="fas fa-at"></i> Send a mail</a
     >
-    <a href="tel:555-555-5555" class="btn contact-details"
+    <a href="tel:01751353353" class="btn contact-details"
       ><i class="fas fa-mobile-alt"></i> Call me</a
     >
   </div>
@@ -195,10 +189,7 @@
 <!-- START FOOTER SECTION -->
 
 <footer>
-  <p>
-    **This is just a fake portfolio. All the projects and contact details given
-    are not real.
-  </p>
+  
   <p>
     &copy; Created for
     <a href="https://www.freecodecamp.com/" target="_blank"
