--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<link rel="stylesheet" type="text/css" href="index.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="index.css">
 <link
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -13,6 +19,12 @@
   href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
   rel="stylesheet"
 />
+  <title>Muhtasim Mahir</title>
+</head>
+<body>
+  
+</body>
+</html>
 <!-- START NAV -->
 
 <nav id="navbar" class="nav">
